# desktop-touch-mcp

./: .gitignore  C:\temp\download.ps1  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  glama.json  index.d.ts  index.js  install.js  package-lock.json  package.json  server.json  start.bat  vitest.config.ts
.github/workflows/: ci.yml  codeql.yml  expansion-pr-guard.yml  input-pipeline-guard.yml  pages.yml  release.yml
__test__/fixtures/: overlay-window.ts
benches/: README.md  a2_http_multisession_isolation.mjs  adr-024-seed2-roundtrip.mjs  adr013_foreground_flash_ladder.mjs  d1_ts_baseline.mjs  d2_desktop_state_roundtrip.mjs  wgc_latency.mjs
benches/fixtures/: visual-only-canvas.ps1
crates/engine-perception/: Cargo.toml
crates/engine-perception/benches/: d1_view_latency.rs
crates/engine-perception/src/: input.rs  lib.rs  time.rs
crates/engine-perception/src/views/: dirty_rects_aggregate.rs  mod.rs
crates/engine-vba-bridge/: Cargo.toml
crates/engine-vba-bridge/src/: apartment.rs  dispatch.rs  excel.rs  lib.rs  registry.rs
docs/: adr-006-winml-rust-binding.md  adr-007-koffi-to-rust-migration.md  adr-007-p1-design-proposal.md  adr-007-p4-design-proposal.md  adr-007-p5a-design-proposal.md  adr-007-p5c-1-plan.md  adr-007-p5c-2-plan.md  adr-007-p5c-plan.md  adr-008-d1-2-plan.md  adr-008-d1-followups.md  adr-008-d1-plan.md  adr-008-d2-b-5-plan.md  adr-008-d2-c-plan.md  adr-008-d2-e0-plan.md  adr-008-d2-plan.md  adr-008-reactive-perception-engine.md  adr-010-followups.md  adr-010-p1-s3-plan.md  adr-010-p1-s4-plan.md  adr-010-p1-s5-plan.md  adr-010-p1-s6-plan.md  adr-010-presentation-layer-self-documenting-envelope.md  adr-011-cognitive-memory-extension.md  adr-011-phase-b-coala-plan.md  adr-013-followups.md  adr-013-option-e-impl.md  adr-013-wt-bg-input.md  adr-015-vba-extensibility-bridge.md  adr-017-session-aware-desktop-touch.md  adr-018-input-pipeline-3tier.md  adr-018-phase-1b-subplan.md  adr-018-phase-2a-subplan.md  adr-018-phase-4-subplan.md  adr-018-phase-5-followup-leaf-walker-subplan.md  adr-018-phase-5-followup-verification-pathway-analysis.md  adr-018-phase-5-subplan.md  adr-019-anti-fukuwarai-v3-temporal-motion-observation.md  adr-019-stage-2a-dogfood-results.md  adr-019-stage-2a-plan.md  adr-019-stage-2b-plan.md  (+48 more)
docs/adr-019-stage-2a-dogfood-raw/: excel-idle-30.txt  excel-real-30.txt  explorer-real-10.txt  word-rich-real-15.txt
docs/llm-audit/: phase2a-doc-audit.md  phase2b-execution-audit.md  phase3a-doc-audit.md  phase3b-execution-audit.md  phase4-query-audit.md  phase6-dogfood-findings.md
scripts/: bench-enum-title.mjs  bench-l1-ingest.mjs  build-rs.mjs  check-expansion-disjoint.mjs  check-launcher-manifest.mjs  check-napi-safe.mjs  check-native-types.mjs  check-no-koffi.mjs  e2e-stop.mjs  enable-access-vbom.mjs  generate-stub-tool-catalog.mjs  measure-tools-list-tokens.ts  pack-zip.mjs
scripts/spikes/: README.md  wt-attachconsole-helper.ps1  wt-attachconsole-orchestrator.ps1  wt-clipboard-flash-typing-test.ps1  wt-clipboard-flash.ps1  wt-uia-inventory.ps1
site/: README.md  index.html  index.md  robots.txt  sitemap.xml
site/articles/: beyond-coordinate-roulette.html  client-setup.html  planned-evaluation.html  reactive-perception-graph.html  reactive-perception-graph.md  v1.0-milestone.html  v1.0-milestone.md  v1.10-milestone.html  v1.10-milestone.md  v1.2-milestone.html  v1.4-milestone.html  v1.4-milestone.md  v1.8-milestone.html  v1.8-milestone.md
site/assets/: styles.css
src/: image_processing.rs  index.ts  lib.rs  server-linux-stub.ts  server-windows.ts  stub-tool-catalog.ts  vba_bridge.rs  version.ts
src/duplication/: device.rs  mod.rs  thread.rs  types.rs
src/engine/: any-change.ts  background-channel-resolver.ts  bg-input.ts  cdp-bridge.ts  diagnostic-log.ts  diagnostic-watchdog.ts  dxgi-broker.ts  image.ts  layer-buffer.ts  native-engine.ts  native-types.ts  nutjs.ts  ocr-bridge.ts  process-health.ts  roi-crop.ts  screenshot-cache.ts  uia-bridge.ts  win32.ts  window-cache.ts
src/errors/: typed-errors.ts
src/l1_capture/: envelope.rs  mod.rs  napi.rs  payload.rs  ring.rs  worker.rs
src/l3_bridge/: dirty_rect_pump.rs  focus_pump.rs  mod.rs
src/store/: ui-pattern-store.ts
src/tools/: _action-guard.ts  _envelope.ts  _errors.ts  _focus.ts  _input-pipeline.ts  _mouse-verify.ts  _resolve-window.ts  _roi-capture-gate.ts  _roi-region.ts  browser-resolver.ts  browser.ts  clipboard.ts  desktop-constraints.ts  desktop-executor.ts  desktop-register.ts  desktop-state.ts  desktop.ts  dock.ts  events.ts  keyboard.ts  macro.ts  mouse.ts  perception-resources.ts  perception.ts  pin.ts  screenshot-gc.ts  screenshot-query.ts  screenshot-response.ts  screenshot.ts  scroll-capture.ts  scroll-read.ts  scroll-to-element.ts  scroll.ts  server-status.ts  smart-scroll.ts  terminal.ts  ui-elements.ts  wait-until.ts  window-dock.ts  window.ts  (+1 more)
src/types/: result.ts
src/uia/: mod.rs  scroll.rs  thread.rs
src/utils/: key-safety.ts  launch-config.ts  launch.ts
src/vision_backend/: capability.rs  error.rs  florence2.rs  inference.rs  mod.rs  omniparser.rs  paddleocr.rs  registry.rs  session_pool.rs  types.rs
src/win32/: clipboard_snapshot.rs  console_paste.rs  dwm.rs  foreground_flash.rs  imm.rs  kbd_hook.rs  mod.rs  safety.rs  session.rs  types.rs  window.rs  wt_dialog_scan.rs
tests/e2e/: abort-check.ts  browser-cdp-verification.test.ts  browser-cdp.test.ts  browser-click-by-axis.test.ts  browser-click-minimized.test.ts  browser-fill-by-axis.test.ts  browser-modal.test.ts  browser-resolver.test.ts  clipboard-readback.test.ts  desktop-act-roi-capture.test.ts  force-focus.test.ts  foreground-flash-verification.test.ts  global-setup.ts  http-transport-kill-switch.test.ts  http-transport.test.ts  mouse-focus-lost.test.ts  mouse-verify-delivery.test.ts  rich-narration-edge.test.ts  scroll-raw-verify.test.ts  terminal-console-paste-load.test.ts  terminal-exit-mode.test.ts  terminal-hidden-input.test.ts  terminal.test.ts  tool-chain.test.ts  ui-elements-cache.test.ts  workspace-chain.test.ts
tests/fixtures/: failwith-callsite-shapes.json
(+173 files in other folders)
