[package]
name = "desktop-touch-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "High-performance image diff engine for desktop-touch-mcp (napi-rs native addon)"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
crossbeam-channel = "0.5"

# ── Visual GPU Phase 4 (ADR-005) ────────────────────────────────────────────
# ORT 2.0.0-rc.12 (2026-03), pykeio/ort. directml feature で AMD/NVIDIA/Intel 全 DX12 GPU 対応。
# WinML, ROCm/MIGraphX, CUDA, TensorRT, WebGPU, CoreML は build feature で opt-in。
#
# load-dynamic を採用:
# - build 時に ONNX Runtime native library を要求しない (CI / msys2/gnu toolchain でも build 可)
# - 実行時に DLL を `ORT_DYLIB_PATH` env または OrtEnvironment::builder で指定
# - Windows では launcher zip に onnxruntime.dll + DirectML.dll を同梱 (Phase 4b)
# - Linux/Mac は配布ターゲット外 (将来 ADR-008 で対応検討)
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
    "std", "ndarray", "tracing", "load-dynamic", "tls-rustls",
    "directml",
    "api-22",
], optional = true }

# Phase 4b-5a-1: image preprocessing (bilinear resize for Florence-2 input)
image = { version = "0.25", default-features = false, features = ["png"] }
# ndarray is already a transitive dep via ort (vision-gpu). Explicit listing
# is required because Rust 2018+ does not make transitive deps directly usable
# via `use ndarray::...` without an explicit entry in Cargo.toml.
# Version is pinned to match ort's requirement (0.17.x). Not a new dependency.
ndarray = { version = "0.17", optional = true }

# ── Visual GPU Phase 4b-2: WinML 統合は ADR-006 に移管 (2026-04-24) ──────────
# 背景: `windows-app` crate は全バージョン yanked + microsoft/windows-app-rs
# repo archived (Microsoft が WinAppSDK-Rust 開発停止を発表)。
# 代替パス (windows-bindgen 自前生成 / 完全手動 COM binding) は 1 batch の
# 範囲を大きく超えるため、独立 ADR-006 として切り出し。
# ep_select の winml_attempt は Phase 4b-1 時点の stub (常に Err) を維持、
# cascade は DirectML (Layer 2) に自動 fall through。

[features]
default = ["vision-gpu"]
# Visual GPU lane を build に含める。CI/最小ビルドでは --no-default-features で除外可能。
vision-gpu = ["dep:ort", "dep:ndarray"]
# Opt-in EPs (ADR-005 D2' Layer 2 cascade)
vision-gpu-cuda     = ["vision-gpu", "ort/cuda"]
vision-gpu-tensorrt = ["vision-gpu", "ort/tensorrt"]
vision-gpu-rocm     = ["vision-gpu", "ort/rocm"]
vision-gpu-migraphx = ["vision-gpu", "ort/migraphx"]
vision-gpu-coreml   = ["vision-gpu", "ort/coreml"]
vision-gpu-openvino = ["vision-gpu", "ort/openvino"]
vision-gpu-webgpu   = ["vision-gpu", "ort/webgpu"]
# vision-gpu-winml は ADR-006 移管後、Phase 4b-1 時点の stub (no-op) に戻す。
# 実装は ADR-006 で独自 COM binding or windows-bindgen self-generated binding を決定。
# 「WinML 利用可」判定は capability.detect_winml() の OS build 判定 (>=26100) のみ。
vision-gpu-winml    = ["vision-gpu"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Shell",
    # Desktop Duplication API (Phase 3)
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    # Visual GPU Phase 4 capability detection (ADR-005)
    "Win32_System_SystemInformation",
    "Wdk_System_SystemServices",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
