[package]
name = "engine-perception"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "L3 Compute layer (timely + differential-dataflow) for desktop-touch-mcp (ADR-008)"
publish = false

[dependencies]
# ADR-008 §2: partial-order time + arrangement-as-MVCC. The latest
# crates.io versions at time of D1-1 land are 0.29 / 0.23 — significantly
# newer than the "0.13+" baseline the ADR was drafted against.
# Plan §6 documents the version-selection rationale.
timely = "0.29"
differential-dataflow = "0.23"

# ADR-008 D1-2: data + timestamp types in the dataflow must implement
# `ExchangeData = Send + Any + Serialize + for<'a> Deserialize<'a>`
# (timely 0.29 src/lib.rs:128). `Pair<u64, u32>` (our LogicalTime in
# `time.rs`) and `FocusEvent` (our row type in `input.rs`) both need
# this — hence the derive feature.
serde = { version = "1", default-features = false, features = ["derive", "std"] }

# crossbeam-channel for the cmd channel that fans push_focus calls
# from `FocusInputHandle` → timely worker thread (timely InputSession
# is thread-local, so we run the InputSession inside a dedicated
# worker thread and feed it via this channel).
crossbeam-channel = "0.5"
